--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ social:
 # Build settings
 exclude: ["_screenshots", "Gemfile", "Gemfile.lock", "LICENSE.txt", "README.md"]
 markdown: kramdown
+#markdown: KramdownPygments
 permalink: /:year/:month/:day/:title/
 
 # Sass
